# back-end

./: .bandit  .codeclimate.yml  .coveragerc  .dockerignore  .flake8  .gitignore  20190522-banditBaseline.json  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  OPS.md  POSTGRESQL_14_UPGRADE_ANALYSIS.md  POSTGRESQL_14_UPGRADE_PLAN.md  Pipfile  README.md  docker-build.sh  docker-compose.yml  example.env  poetry.toml  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: LITESTREAM_PROPOSAL.md
scripts/: functional_test.sh
src/: custom_storages.py  gunicorn_config.py  manage.py
src/api/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/api/migrations/: 0001_initial.py  0002_auto_20190522_1618.py  0002_userinfo.py  0003_auto_20190421_1004.py  0003_auto_20190604_1058.py  0004_auto_20190421_1205.py  0004_auto_20190604_1223.py  0005_auto_20190421_1213.py  0005_scholarship_scholarshipapplication.py  0006_auto_20190422_0849.py  0006_auto_20190604_1242.py  0006_auto_20190610_1058.py  0007_auto_20190604_1331.py  0007_codeschool_has_housing.py  0008_codeschool_is_vet_tec_approved.py  0009_successstory.py  0010_auto_20200501_1444.py  0010_auto_20200505_1711.py  0011_auto_20200503_1834.py
src/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py
src/backend/: adapters.py  admin.py  handlers.py  models.py  security.py  serializers.py  tasks.py  urls.py
src/backend/migrations/: 0001_initial.py  0002_auto_20190514_1907.py
src/backend/templates/: email_base.html
src/backend/templates/registration/: password_reset_email.html
src/core/: adapters.py  admin.py  apps.py  exceptions.py  handlers.py  hashers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_auto_20190514_1907.py  0003_auto_20190526_2129.py  0004_auto_20190527_0926.py  0005_auto_20190527_0934.py  0006_auto_20190531_1841.py  0007_auto_20190603_1459.py  0008_profile_created_at.py  0009_auto_20190610_1152.py
src/core/templates/account/email/: email_confirmation_message.txt  email_confirmation_signup.html  email_confirmation_signup_message.txt
src/core/templates/admin/: base_site.html
src/core/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_email.txt  welcome.html  welcome.txt
src/frontend/: apps.py  forms.py  urls.py  views.py
src/frontend/migrations/: 0001_initial.py
src/frontend/static/css/: common.css
src/frontend/static/js/: codeschool.js
src/frontend/templates/: code_school_ajax_body.txt
src/frontend/templates/frontend/: base.html  codeschool-form.html  index.html  survey.html
src/operationcode_backend/: custom_logging.py  settings.py  urls.py  wsgi.py
src/settings/: __init__.py  common.py  development.py  testing.py
src/settings/components/: __init__.py  authentication.py  base.py  docs.py  external.py  frontend.py  logging.py  rest.py
src/settings/environments/: development.py  local.py.template  production.py  staging.py  testing.py
src/tests/: conftest.py  factories.py  fixtures.py  test_data.py  utils.py
src/tests/integration/: test_change_password.py  test_code_school_api.py  test_codeschool_form.py  test_data.py  test_profile_admin_view.py  test_profile_updates.py  test_rest_login.py  test_rest_password_reset.py  test_rest_registration.py  test_success_story.py  test_user_api.py
src/tests/unit/: test_custom_exception_handler.py  test_tasks.py  test_tokens.py
