[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Allen Anthes <allen@operationcode.org>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.0"
boto3 = "^1.13.0"
cryptography = "^43.0"
django = "^4.2"
djangorestframework = "^3.14"
djangorestframework-camel-case = "^1.0"
djangorestframework-simplejwt = "^5.3"
django-allauth = "^65.0"
django-anymail = "^12.0"
django-q2 = "^1.7"
django-cors-headers = "^4.3"
dj-rest-auth = "^7.0"
django-split-settings = "^1.0"
django-storages = "^1.14"
django-jazzmin = "^3.0"
drf-yasg = "^1.21"
gunicorn = "^23"
packaging = "^25"
pillow = "^11"
psycopg2 = "^2.9"
python-decouple = "^3.1"
mailchimp3 = "^3.0"
mandrill = "^1.0"
python-dotenv = "^1.0"
requests = "^2"
sentry-sdk = "^2"
honeycomb-beeline = "^3"
django-allow-cidr = "^0.7"
django-health-check = "^3.18"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8"
black = "^24.0"
coverage = "^7.0"
django-debug-toolbar = "^4.4"
factory_boy = "^3.3"
flake8 = "^7.0"
flake8-bugbear = "^24.0"
isort = "^5.13"
pyhumps = "^3.8"
pytest = "^8.0"
pytest-django = "^4.8"
pytest-env = "^1.1"
pytest-mock = "^3.14"
responses = "^0.25"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
