[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Allen Anthes <allen@operationcode.org>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.3"                             # Stay on 4.x (5.0 has breaking changes)
boto3 = "^1.42"                             # Was ^1.13 - ensures urllib3 >= 2.6.3
cryptography = "^46.0"                      # Was ^43.0 - fixes CVE-2024-12797
django = "^4.2"                             # Keep - conservative approach
djangorestframework = "^3.16"               # Was ^3.14 - fixes CVE-2024-21520
djangorestframework-camel-case = "^1.4"     # Was ^1.0
djangorestframework-simplejwt = "^5.3"      # Keep (works with Django 4.2)
django-allauth = "^65.0"                    # Keep (already compatible)
django-anymail = "^14.0"                    # Was ^12.0
django-q2 = "^1.7"                          # Keep
blessed = "^1.20"                           # Keep (django-q2 monitoring)
django-cors-headers = "^4.6"                # Was ^4.3
dj-rest-auth = "^7.0"                       # Keep
django-split-settings = "^1.3"              # Was ^1.0
django-storages = "^1.14"                   # Keep
django-jazzmin = "^3.0"                     # Keep
drf-yasg = "^1.21"                          # Keep (1.21.14 is latest)
gunicorn = "^23"                            # Keep
psycopg2 = "^2.9"                           # Keep
python-decouple = "^3.8"                    # Was ^3.1
mailchimp3 = "^3.0"                         # Keep
requests = "^2.32"                          # Was ^2
urllib3 = "^2.6.3"                          # CVE-2025-66471, CVE-2025-66418, CVE-2026-21441
sentry-sdk = "^2.49"                        # Was ^2
honeycomb-beeline = "^3"                    # Keep
django-allow-cidr = "^0.8"                  # Was ^0.7
django-health-check = "^3.20"               # Was ^3.18

[tool.poetry.group.dev.dependencies]
bandit = "^1.9"                             # Was ^1.8
black = ">=25.0"
coverage = "^7.0"                           # Keep
django-debug-toolbar = "^5.0"               # Was ^4.4 (6.x has API changes)
factory_boy = "^3.3"                        # Keep
flake8 = "^7.0"                             # Keep
flake8-bugbear = ">=25.0"
isort = ">=7.0"
pyhumps = "^3.8"                            # Keep
pytest = ">=9.0"
pytest-django = "^4.8"                      # Keep
pytest-env = "^1.1"                         # Keep
pytest-mock = "^3.14"                       # Keep
responses = "^0.25"                         # Keep

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=2.3.0"]
build-backend = "poetry.masonry.api"
